--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
