--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -45,9 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss-import": "^16.1.0",
-    "tailwindcss": "^3.4.3"
-  }
+  "devDependencies": {}
 }
