--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
-    "bootstrap-icons": "^1.11.3",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -45,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
